# seen

./: .dockerignore  .gitignore  API.md  Cargo.toml  Dockerfile  Dockerfile.combined  Dockerfile.cuda  Dockerfile.test  GPU.md  README.md  TESTING.md  adjust-docker-compose.ps1  build_tauri.bat  copy-frontend.bat  copy-frontend.sh  detect-nvidia-gpu.ps1  dev.bat  docker-compose.custom.tmp.yml  docker-compose.custom.yml  docker-compose.smoke.yml  docker-compose.synology-no-face.yml  docker-compose.synology.yml  docker-compose.test.yml  docker-compose.ugreen-no-face.yml  docker-compose.ugreen.yml  docker-compose.windows-no-face.yml  docker-compose.windows.yml  face.bat  libvips.html  ops.html  profile.bat  run-nazr-windows.bat  run-seen-windows.bat  run.bat  run_with_docker.bat  run_with_tauri.bat
.github/workflows/: ci.yml  release-backend.yml  release.yml  test.yml
benches/: hash_bench.rs
frontend/: .dockerignore  .gitattributes  .gitignore  Dockerfile  LICENSE.md  README.md  build-tauri-windows.bat  dev-docker.bat  dev-vite.bat  docker-entrypoint.sh  index.html  nginx.conf  package-lock.json  package.json  run-tauri-windows.bat  vite.config.ts
frontend/.github/workflows/: release-frontend.yml
frontend/assets/: index-B4oKql9_.css  index-Cjg-YR9T.js  index-CwOCpROE.js  tauriDialogStub-CsDCIdKk.js
frontend/src/: App.tsx  index.css  main.tsx  types.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: lib.rs
frontend/src/components/: AdaptiveDebugPanel.tsx  AdvancedFilters.tsx  AssetCard.tsx  BulkActions.tsx  BurstCapture.tsx  ConfirmDialog.tsx  ContextMenu.tsx  ErrorBoundary.tsx  ErrorView.tsx  FileBrowser.tsx  Filters.tsx  Footer.tsx  GalleryGrid.tsx  Header.tsx  KeyboardShortcutsModal.tsx  Lightbox.tsx  Loading.tsx  LoadingSkeleton.tsx  MetadataPanel.tsx  PathsManager.tsx  SettingsModal.tsx  Timeline.tsx  VideoPlayer.tsx
frontend/src/constants/: fileTypes.ts
frontend/src/lib/: adaptiveLoading.tsx  albums.ts  api.ts  assetOrganization.ts  config.ts  folderStructure.ts  hooks.ts  keyboard.ts  normalize.ts  runtime.ts  scroll.ts  store.ts  tauriDialogStub.ts  utils.ts
frontend/src/pages/: Albums.tsx  AssetDetail.tsx  Dashboard.tsx  Gallery.tsx  NotFound.tsx  People.tsx  Performance.tsx  Search.tsx
scripts/: docker_smoke.sh
src/: lib.rs  main.rs  stats.rs
src/api/: handlers.rs  handlers_face.rs  mod.rs  routes.rs
src/db/: mod.rs  query.rs  schema.rs  writer.rs
src/models/: asset.rs
src/pipeline/: discover.rs  discover_linux.rs  face.rs  hash.rs  metadata.rs  mod.rs  thumb.rs
src/utils/: config.rs  exec.rs  ffmpeg.rs  logging.rs  mod.rs  path.rs  profile.rs
tests/: smoke.rs
tests/api/: albums.rs  assets.rs  health.rs  paths.rs
tests/common/: fixtures.rs  mod.rs
tests/db/: query_integration.rs  writer_integration.rs
tests/e2e/: full_scan.rs
tests/edge_cases/: files.rs
tests/errors/: handling.rs
tests/pipeline/: hash_integration.rs
