[package]
name = "nazr-backend-sqlite"
version = "0.8.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower-http = { version = "0.6", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.30", features = ["bundled", "chrono", "serde_json", "functions"] }
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2"
jwalk = "0.8"
notify = "6"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
memmap2 = "0.9"  # Memory-mapped files for faster I/O on large files
which = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "1"
mime_guess = "2"
hyper = { version = "0.14", features = ["client", "http1", "http2", "tcp"] }
http = "0.2"
bytes = "1"
once_cell = "1"
parking_lot = "0.12"
hex = "0.4"
sysinfo = "0.30"
urlencoding = "2.1"
image = "0.24"
reqwest = { version = "0.11", features = ["blocking", "json"] }
futures-util = "0.3"
libc = "0.2"
rayon = "1.8"
# Vector search / clustering for facial recognition
# Note: hdbscan crate was yanked; HDBSCAN can be integrated later via Python bindings (pyo3)
# or a different clustering crate. The code uses a DBSCAN-style fallback with HDBSCAN-style API.
# faiss = { version = "0.12", optional = true }  # Uncomment when ready to use real FAISS
# Optional GPU device detection (can be enabled via features)
# cuda-driver = { version = "0.1", optional = true }
# opencl = { version = "0.5", optional = true }
# Facial recognition dependencies (optional)
ort = { version = "2.0.0-rc.10", optional = true, features = ["cuda"] }
# arroy = { version = "0.1", optional = true }  # Deferred until API is confirmed
ndarray = { version = "0.15", optional = true }

# Use assembly optimizations on Linux/GCC, but not on Windows MSVC
# libvips doesn't compile on Windows MSVC, only include on non-Windows
[target.'cfg(not(target_env = "msvc"))'.dependencies]
sha2 = { version = "0.10", features = ["asm"] }
libvips = "1.6"

[target.'cfg(target_env = "msvc")'.dependencies]
sha2 = { version = "0.10" }
webp = "0.2"  # WebP encoder for Windows thumbnail fallback

[features]
default = ["facial-recognition"]
facial-recognition = ["dep:ort", "dep:ndarray"]
postgres = []

# For optimal SHA256 performance, compile with `RUSTFLAGS="-C target-cpu=native"`
# in your Dockerfile or build environment to enable hardware acceleration.
[profile.release]
opt-level = 3          # Maximum optimization
lto = "thin"           # Link-time optimization (better performance, reasonable compile time)
codegen-units = 1      # Better optimization (slower compile, faster runtime)
strip = true           # Strip symbols for smaller binary

[[bench]]
name = "hash_bench"
harness = false

[dev-dependencies]
tempfile = "3"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
criterion = { version = "0.5", features = ["html_reports"] }
