[package]
name = "seen-frontend"
version = "0.8.0"
description = "Seen - Media Management Frontend"
authors = ["Seen Team"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
# Needed for DevTools (F12 / Ctrl+Shift+I) in release builds
tauri = { version = "2.9.2", features = ["devtools"] }
tauri-plugin-log = "2.0"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
